<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:text="@string/nameRecipe"
                android:gravity="center"/>

            <EditText
                android:id="@+id/nameRecipe"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:text="@string/dishtype"
                android:gravity="center"/>

            <EditText
                android:id="@+id/foodtype"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:text="@string/foodtype"
                android:gravity="center"/>

            <EditText
                android:id="@+id/dishtype"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:text="@string/description"
                android:gravity="center"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:text="@string/servings"
                android:gravity="center"/>

            <EditText
                android:id="@+id/servings"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:inputType="number"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/addIngredientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addIngredient"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/addPreparationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addPreparation"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ListView
                android:id="@+id/IngredientList"
                android:layout_width="195dp"
                android:layout_height="match_parent"/>
            <ListView
                android:id="@+id/PreparationList"
                android:layout_width="195dp"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <Button
            android:id="@+id/createRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/createRecipe"/>

    </LinearLayout>


</RelativeLayout>