<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:text="@string/nameRecipe"
                android:gravity="center"/>

            <EditText
                android:id="@+id/nameRecipesearch"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:text="@string/dishtype"
                android:gravity="center"/>

            <EditText
                android:id="@+id/foodtypesearch"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:inputType="text"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">


            <TextView
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:text="@string/foodtype"
                android:gravity="center"/>

            <EditText
                android:id="@+id/dishtypesearch"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:inputType="text"/>
        </LinearLayout>

        <Button
            android:id="@+id/AdvSearcherPrepare_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/preparesearcher"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/AdvSearcher_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/searcher"
            android:textSize="12sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>