<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:text="@string/nameview"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/RecipeNameView"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:text="@string/servingview"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/RecipeServingView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:text="@string/dishview"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/RecipeDishView"
                android:layout_width="146dp"
                android:layout_height="60dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="56dp"
                android:layout_height="60dp"
                android:text="@string/foodview"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/RecipeFoodView"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/descriptionview"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:id="@+id/RecipeDescriptionView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/ingredientsview"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <ListView
                android:id="@+id/IngredientListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/preparationsview"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <ListView
                android:id="@+id/PreparationListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>