<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/ingredientpreparation"
                android:gravity="center"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passPreparationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preparacióRecepta">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passPreparation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/createPreparationButton"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginStart="116dp"
        android:layout_marginTop="500dp"
        android:text="@string/createPreparation" />

</RelativeLayout>