<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/ingredientname"
                android:gravity="center"/>

            <EditText
                android:id="@+id/nameIngredient"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/ingredientamount"
                android:gravity="center"/>

            <EditText
                android:id="@+id/amount"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:inputType="number"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="190dp"
                android:layout_height="60dp"
                android:text="@string/ingredienttype"
                android:gravity="center"/>

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:entries="@array/type_array" />

        </LinearLayout>

        <Button
            android:id="@+id/createIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:text="@string/createIngredient"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>
